Added things for websockets

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<div id="output"></div>
+<button id="addCircle">AddCircle</button>
+<button id="addRectangle">AddRectangle</button>
+<button id="addTriangle">AddTriangle</button>
+<button id="pencil">Pencil</button>
+<button id="selection">Selection</button>
+<canvas id="canvas" width="1024" height="768"></canvas>
 </body>
 </html>
