--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="output"></div>
+<h1>Aplicación de dibujo colaborativo</h1>
+<h2>Lista de Usuarios</h2>
+<div id="userList"></div>
+<h2>Canvas</h2>
 <button id="addCircle">AddCircle</button>
 <button id="addRectangle">AddRectangle</button>
 <button id="addTriangle">AddTriangle</button>
 <button id="pencil">Pencil</button>
 <button id="selection">Selection</button>
 <canvas id="canvas" width="1024" height="768"></canvas>
+
 </body>
 </html>
